# CollaborativeDroneLocalization

./: .gitignore  README.md  rqt_vision.perspective  rviz_config.rviz
ardrone_pose_estimator/: CMakeLists.txt  package.xml
ardrone_pose_estimator/cfg/: ardrone_pose_estimator.cfg
ardrone_pose_estimator/include/ardrone_pose_estimator/: ardrone_pose_estimator_node.h
ardrone_pose_estimator/launch/: joystick_controller.launch
ardrone_pose_estimator/src/: ardrone_pose_estimator_node.cpp  fly_from_joy_test_K.cpp
cube_dot_finder/: package.xml
cube_dot_finder/cfg/: DotFinder.cfg
cube_dot_finder/include/dot_finder/: dot_detector.h  dot_finder_node.h  visualization.h
cube_dot_finder/launch/: default.launch  follower.launch  leader.launch
cube_dot_finder/src/: dot_detector.cpp  dot_finder_node.cpp
dot_finder/: CMakeLists.txt  package.xml
dot_finder/cfg/: DotFinder.cfg
dot_finder/include/dot_finder/: dot_detector.h  dot_finder_node.h  led_detector.h  visualization.h
dot_finder/launch/: king.launch  mamba.launch  peach.launch  toad.launch
dot_finder/msg/: DuoDot.msg
dot_finder/src/: dot_detector.cpp  dot_finder_node.cpp  led_detector.cpp  visualization.cpp
drone_nav/: CMakeLists.txt~  package.xml
drone_nav/catkin/: CMakeLists.txt  package.xml
drone_nav/include/drone_nav/: autonomous_control.h  drone_nav_node.h
drone_nav/launch/: demo.launch  peachDrone.launch  peach_toad.launch  start.launch  toadDrone.launch  twoDrone.launch
drone_nav/rosbuild/: fuerte_CMakeLists.txt
drone_nav/src/: autonomous_control.cpp  drone_nav_node.cpp  main.cpp
dronenav/: CMakeCache.txt  CMakeLists.txt.user.2.5pre1  env.sh  mainpage.dox  manifest.xml  setup.bash  setup.sh  setup.zsh
dronenav/catkin/: CMakeLists.txt
dronenav/include/dronenav/: dronenav_node.h
dronenav/src/: dronenav_node.cpp  main.cpp
particle_filter/: CMakeLists.txt  package.xml
particle_filter/cfg/: ParticleFilter.cfg
particle_filter/include/particle_filter/: mutual_pose_estimation.h  particle_filter_node.h  pose_filter.h  prob.hpp  region_of_interest.h  visualization.h
particle_filter/launch/: cube.launch  default.launch  peach_toad.launch
particle_filter/src/: mutual_pose_estimation.cpp  particle_filter_node.cpp  pose_filter.cpp  prob.cpp  region_of_interest.cpp  visualization.cpp
