<?xml version="1.0"?>
<package>
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>Take the pixel position from two cameras and estimate the 6DOF pose.</description>

  <maintainer email="philippe.babin@gmail.comn">philippe babin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dot_finder</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dot_finder</run_depend>
  <run_depend>tf</run_depend>
  <export>

  </export>
</package>
