<?xml version="1.0"?>
<package>
  <name>dronenav</name>
  <version>0.0.0</version>
  <description>Pose estimator for a team of AR drone v2</description>
  <maintainer email="philippe.babin@gmail.comn">philippe babin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>
</package>
